--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
     <div>test01</div>
     <div>test02</div>
     <div>test03</div>
-    
+
     <iframe width="1000" height="500" src="https://www.youtube.com/embed/8bxN6ON69wQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <button id="baz">aa</button>
     <script src="index.js"></script>
 </body>
 </html>
+
+<div class = "gcse-searchbox" data-gname = "storesearch" > </ div>      
+    <div class = "gcse-searchresults" data-gname = "storesearch" > </ div>      
 
 <script async src="https://cse.google.com/cse.js?cx=006928924415682729180:xxl55gvqqd8"></script>
 <div class="gcse-search"></div>
