--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
 </body>
 </html>
    
-
 <script async src="https://cse.google.com/cse.js?cx=006928924415682729180:xxl55gvqqd8"></script>
-<div class="gcse-search"></div>
+<div class="gcse-searchbox"></div>
+
+<form id="cse-search-box" action="http://google.com/cse">
+    <input type="hidden" name="cx" value="006928924415682729180:xxl55gvqqd8" />
+    <input type="hidden" name="ie" value="UTF-8" />
+    <input type="text" name="q" size="31" />
+    <input type="submit" name="sa" value="Search" />
+  </form>
+  <img src="http://www.google.com/cse/images/google_custom_search_smwide.gif">
 
 <div class = "gcse-searchbox" data-gname = "storesearch" > </ div>      
-    <div class = "gcse-searchresults" data-gname = "storesearch" > </ div>   
+    <div class = "gcse-searchresults" data-gname = "storesearch" > </ div>
 
