--- a/index.html
+++ b/index.html
@@ -33,3 +33,6 @@
 <div class = "gcse-searchbox" data-gname = "storesearch" > </ div>      
     <div class = "gcse-searchresults" data-gname = "storesearch" > </ div>
 
+<script async src="https://cse.google.com/cse.js?cx=006928924415682729180:xxl55gvqqd8"></script>
+<div class="gcse-searchbox"></div>        
+
