--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onLoad="set_focus()">
-
-    <form action="msearch.cgi" method="GET" accept-charset="utf-8" name="msearch">
-    <table align="center" border="0" cellspacing="0" cellpadding="3">
-        
+<body>        
     <div>test01</div>
     <div>test02</div>
     <div>test03</div>
 
     <script src="index.js"></script>
+    <div>
+        <script async src="https://cse.google.com/cse.js?cx=006928924415682729180:xxl55gvqqd8"></script>
+        <div class="gcse-searchbox"></div>
+    </div>
 </body>
 </html>
    
-<script async src="https://cse.google.com/cse.js?cx=006928924415682729180:xxl55gvqqd8"></script>
-<div class="gcse-searchbox"></div>
 
 <!--
 
