--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <div>
         <script async src="https://cse.google.com/cse.js?cx=006928924415682729180:xxl55gvqqd8"></script>
         <div class="gcse-searchbox"></div>
+        <div class="gcse-searchresults"></div>
     </div>
+    <form id="cse-search-box" action="http://google.com/cse">
+        <input type="hidden" name="cx" value="006928924415682729180:xxl55gvqqd8" />
+        <input type="hidden" name="ie" value="UTF-8" />
+        <input type="text" name="q" size="31" />
+        <input type="submit" name="sa" value="Search" />
+      </form>
+      <img src="http://www.google.com/cse/images/google_custom_search_smwide.gif">
 </body>
 </html>
    
