--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
       <img src="http://www.google.com/cse/images/google_custom_search_smwide.gif">
 </body>
 </html>
-   
+
+<!--javascriptで検索-->
+
+<form action="/search-result/">
+    <input id="search-input" placeholder="1つキーワードを入力" type="text" name="search-key">
+    <input id="search-buttom" class="fas" type="submit" value="" method="get">
+</form>
+
 
 <!--
 
