--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <input id="search-buttom" class="fas" type="submit" value="" method="get">
 </form>
 
+<div class="contents">
+    <h1>検索結果</h1>
+    <ul id="ul">
+    </ul>
+</div>
 
 <!--
 
