--- a/index.html
+++ b/index.html
@@ -29,16 +29,10 @@
 
 <!--javascriptで検索-->
 
-<form action="/search-result/">
+<form action="/testweb/search-result/">
     <input id="search-input" placeholder="1つキーワードを入力" type="text" name="search-key">
     <input id="search-buttom" class="fas" type="submit" value="" method="get">
 </form>
-
-<div class="contents">
-    <h1>検索結果</h1>
-    <ul id="ul">
-    </ul>
-</div>
 
 <!--
 
