--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <!--javascriptで検索-->
 
-<form action="/testweb/search-result/result.html/">
+<form action="/testweb/search-result/result.html">
     <input id="search-input" placeholder="1つキーワードを入力" type="text" name="search-key">
     <input id="search-buttom" class="fas" type="submit" value="" method="get">
 </form>
