--- a/search-result/result.html
+++ b/search-result/result.html
@@ -12,7 +12,7 @@
   v = v.get('search-key');
 　//検索したい全てのURLを配列に格納
   const urlLists = [
-    "/data/xml/",
+    "/search-result/",
     "/site-speed/asynchronous/",
     "/site-speed/for_while/",
     "/site-speed/async-2/"];
