--- a/search-result/result.html
+++ b/search-result/result.html
@@ -13,7 +13,7 @@
 　//検索したい全てのURLを配列に格納
   const urlLists = [
     "/search-result/",
-    "/site-speed/asynchronous/",
+    "/search-result/main.html",
     "/site-speed/for_while/",
     "/site-speed/async-2/"];
   $.each(urlLists, function(i){
