--- a/search-result/result.html
+++ b/search-result/result.html
@@ -12,8 +12,9 @@
   v = v.get('search-key');
 　//検索したい全てのURLを配列に格納
   const urlLists = [
-    "/search-result/",
-    "/search-result/main.html",
+  　"/testweb/",
+    "/testweb/search-result/",
+    "/testweb/search-result/main.html",
     "/site-speed/for_while/",
     "/site-speed/async-2/"];
   $.each(urlLists, function(i){
